--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter: ^2.5.3
   flutter_svg: ^2.0.4
   animate_do: ^3.0.2 # fade in fade out
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
