--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_svg: ^2.0.4
   animate_do: ^3.0.2 # fade in fade out
   get: ^4.6.5
+  fluttertoast: ^8.2.4
+  http: ^0.13.4
 
 dev_dependencies:
   flutter_test:
